Changes for 2.4.6rc1

New features:
...G...PS. [ZBXNEXT-786] made net.tcp.service[ntp] item work over UDP (asaveljevs)

Bug fixes:
...G...... [ZBX-9467] fixed agent compilation error related to "ifnet" and "ifnet_head" structs on OpenBSD 5.5 and above (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.4.5

A.F....... [ZBX-1357] updated Polish and Slovak translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.4.5rc1

New features:
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Italian and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-9457] fixed server crash in case ValueCacheSize=0; thanks to MATSUDA Daiki for patch (asaveljevs)
.......PS. [ZBX-5717] fixed incorrect calculation of icmppingloss[] due to floating-point errors (asaveljevs)
........S. [ZBX-9436] fixed zabbix_server to not exit in case of database connection loss in the middle of transaction (dimir)
........S. [ZBX-9355] added host name and names of conflicting templates to the error message when templates fail to link due to a duplicate item, fixed linking of templates containing web scenarios (igors)
........S. [ZBX-9352] fixed execution of remote commands on the server in case trigger expression contains multiple hosts (asaveljevs)
........S. [ZBX-9394] fixed SMS sending with Teltonika modems (asaveljevs)
........S. [ZBX-3507] fixed SMS sending with Huawei GSM modems (asaveljevs)
.......PS. [ZBX-7446] fixed vmware.hv.status item always returning 0 (gray) status (wiper)
A......... [ZBX-9346] fixed importing trigger dependencies and maps that contain the triggers expressions with old style operators (Ivo)
...G...... [ZBX-9410] fixed agent logging to eventlog (syslog option) on Windows (wiper)