@@ -2529,9 +2529,8 @@ void	process_dhis_data(struct zbx_json_parse *jp)
 					drule.druleid);
 
 			if (NULL != (row = DBfetch(result)))
-			{
 				ZBX_STR2UINT64(drule.unique_dcheckid, row[0]);
-			}
+
 			DBfree_result(result);
 
 			last_druleid = drule.druleid;
@@ -2549,12 +2548,37 @@ void	process_dhis_data(struct zbx_json_parse *jp)
 				zbx_date2str(itemtime), zbx_time2str(itemtime), ip, dns, port, dcheck.key_, value);
 
 		DBbegin();
-		if (-1 == dcheck.type)
-			discovery_update_host(&dhost, ip, status, itemtime);
-		else
-			discovery_update_service(&drule, &dcheck, &dhost, ip, dns, port, status, value, itemtime);
-		DBcommit();
 
+		if (-1 == dcheck.type)
+		{
+			if (SUCCEED != discovery_verify_drule(drule.druleid))
+			{
+				DBrollback();
+
+				zabbix_log(LOG_LEVEL_DEBUG, "druleid:" ZBX_FS_UI64 " does not exist", drule.druleid);
+
+				goto next;
+			}
+
+			discovery_update_host(&dhost, ip, status, itemtime);
+		}
+		else
+		{
+			if (SUCCEED != discovery_verify_dcheck(drule.druleid, dcheck.dcheckid))
+			{
+				DBrollback();
+
+				zabbix_log(LOG_LEVEL_DEBUG, "dcheckid:" ZBX_FS_UI64 " either does not exist or does not"
+						" belong to druleid:" ZBX_FS_UI64, dcheck.dcheckid, drule.druleid);
+
+				goto next;
+			}
+
+			discovery_update_service(&drule, &dcheck, &dhost, ip, dns, port, status, value, itemtime);
+		}
+
+		DBcommit();
+next:
 		continue;
 json_parse_error:
 		zabbix_log(LOG_LEVEL_WARNING, "invalid discovery data: %s", zbx_json_strerror());
